--- a/app/views/public/groups/new_mail.html.erb
+++ b/app/views/public/groups/new_mail.html.erb
@@ -1,19 +1,25 @@
 <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 px-sm-0 mx-auto">
-    <h2>通知メール</h2>
+ <div class='row'>
+    <div class="col-sm-5 col-md-8 mx-auto">
+    <h4 class="my-4 ml-4">通知メール</h4>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 sm-8 mx-auto">
     <%= form_with url: group_send_mail_path(@group),method: :get, local: true do |f| %>
-    <div class="form-group">
-        <%= f.label :title %>
+      <div class="form-group">
+        <%= f.label :タイトル %>
         <%= f.text_field :mail_title,class:'form-control'%>
-        </div>
-    <div class="form-group">
-        <%=f.label:content %>
-        <%= f.text_area :mail_content,class:'form-control' %>
-    </div>
-    <div>
-    <%= f.submit'送信', class: "btn btn-sm btn-success" %>
-    </div>
+      </div>
+      <div class="form-group">
+        <%=f.label:本文 %>
+        <%= f.text_area :mail_content,class:'form-control mb-4' %>
+      </div>
+      <div>
+        <%= f.submit'送信', class: "btn btn-outline-primary" %>
+      </div>
     <% end %>
     </div>
   </div>
