--- a/app/views/public/groups/send_mail.html.erb
+++ b/app/views/public/groups/send_mail.html.erb
@@ -1,12 +1,16 @@
-<div class="container d-flex flex-column align-items-center text-left">
-  <div>
-    <h3 class="mb-3">送信が完了しました</h3>
-    <p class="mb-1">内容は以下の通りです。</p>
-    <div>
-      [タイトル]<p class="font-weight-bold"> <%= @mail_title %></p>
-    </div>
-    <div>
-      [本文]<p class="font-weight-bold"> <%= safe_join(@mail_content.split("\n"),tag(:br)) %></p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 sm-5 mx-auto mt-5 text-center align-items-center d-flex justify-content-center"> <!-- align-items-center と justify-content-center クラスを追加 -->
+      <div>
+        <h3>送信が完了しました</h3>
+        <p class="my-4">内容は以下の通りです。</p>
+        <div>
+          [タイトル]<p class="font-weight-bold"> <%= @mail_title %></p>
+        </div>
+        <div>
+          [本文]<p class="font-weight-bold"> <%= safe_join(@mail_content.split("\n"),tag(:br)) %></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
