--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -23,19 +23,19 @@
     </table>
   </div>
 
-  <div class="col col-md-7 col-sm-8 offset-md-1 mx-auto">
+  <div class="col col-md-6 col-sm-8 offset-md-1 mx-auto">
     <div class="d-flex align-items-center">
       <h4>詳細情報</h4>
       <% if current_customer == pet_post.customer %>
         <div class="ml-3">
-          <%= link_to "編集する", edit_pet_post_path(pet_post), class: "btn btn-outline-info" %>
-          <%= link_to "削除", pet_post_path(pet_post), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-outline-info" %>
+          <%= link_to "編集する", edit_pet_post_path(pet_post), class: "btn btn-outline-secondary mb-2" %>
+          <%= link_to "削除", pet_post_path(pet_post), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-outline-danger mb-2" %>
         </div>
       <% end %>
     </div>
     <table class="table table-bordered">
       <tr>
-        <td class="bg-light">ペットの状況</td>
+        <td class="bg-light col-4">ペットの状況</td>
         <td><%= pet_post.pet_status_i18n %></td>
       </tr>
       <tr>
