--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -29,7 +29,7 @@
           <div class="input-group mb-3">
             <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", id:"inputConfirmPassword", placeholder:"パスワード確認" %>
           </div>
-          <%= f.submit "サインアップ", class:"btn btn-block btn-secondary mt-5" %>
+          <%= f.submit "新規登録する", class:"btn btn-block btn-secondary mt-5" %>
         <% end %>
         <div class="pt-5">
         登録済みの方、ゲストログインの方は<br>
