finish add test-date

--- a/app/views/public/comments/_form.html.erb
+++ b/app/views/public/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [pet_post, comment] do |f| %>
-  <%= f.text_area :comment, rows: '2', class: "form-control",  placeholder: "コメントをここに(20文字以内)" %>
+  <%= f.text_area :comment, rows: '2', class: "form-control",  placeholder: "コメントをここに(空欄は反映されません)" %>
   <div class="my-2">
     <%= f.submit "送信する", class: "btn btn-sm btn-outline-secondary" %>
   </div>
