--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -13,7 +13,7 @@
     <div class="col col-md-7 col-sm-8 mt-5">
      <table class='table table-bordered'>
       <tr>
-        <th class="bg-light">エリア名</th>
+        <th class="bg-light">エリア名(グループ名)</th>
         <td><%= @group.name %></td>
       <tr>
         <th class="bg-light">紹介文</th>
