finish fix-error

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -30,5 +30,8 @@
             </tbody>
         </table>
     </div>
+     <div class="mx-auto mt-3">
+      <%= paginate @customers %>
+    </div>
   </div>
 </div>
