--- a/app/views/admin/customers/_info.html.erb
+++ b/app/views/admin/customers/_info.html.erb
@@ -31,4 +31,4 @@
   </tr>
 </table>
 
-<%= link_to "編集する",  edit_admin_customer_path, class: "btn btn-outline-info" %>
+<%= link_to "編集する",  edit_admin_customer_path, class: "btn btn-outline-secondary" %>
