--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,36 +1,37 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-10 col-sm-8 mx-auto">
-
-      <h4 class="my-3 ml-4">会員一覧</h4>
-        <table class='table'>
-          <thead>
+  <div class="row justify-content-center">
+    <div class="col">
+      <h4 class="my-4 ml-5">会員一覧</h4>
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-8 my-3">
+          <table class='table'>
             <tr class="bg-light">
               <th style="width: 10%">会員ID</th>
               <th style="width: 35%">氏名</th>
               <th style="width: 35%">メールアドレス</th>
               <th style="width: 20%">ステータス</th>
             </tr>
-          </thead>
-          <tbody>
             <% @customers.each do |customer| %>
               <tr>
                 <td><%= customer.id %></td>
                 <td><%= link_to customer.name, admin_customer_path(customer.id), class:"link-order-customer" %></td>
                 <td><%= customer.email %></td>
                 <td>
-                    <% if customer.active == true %>
-                        <p>有効</p>
-                    <% else %>
-                        <p class="text-danger">アカウント停止</p>
-                    <% end %>
+                  <% if customer.active == true %>
+                      <p>有効</p>
+                  <% else %>
+                      <p class="text-danger">アカウント停止</p>
+                  <% end %>
                 </td>
               </tr>
-              <% end %>
-            </tbody>
-        </table>
+            <% end %>
+          </table>
+        </div>
+      </div>
     </div>
-     <div class="mx-auto mt-3">
+     <div class="mx-auto">
       <%= paginate @customers %>
     </div>
   </div>
