--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,8 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 sm-5">
-      <%= render 'layouts/error', obj: @customer %>
+    <div class="col-md-8 sm-5 mx-auto">
       <h4 class="my-3 ml-4">会員情報編集</h4>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+     <div class="col-md-8 sm-8 mx-auto">
+      <%= render 'layouts/error', obj: @customer %>
       <%=render 'form', customer:  @customer %>
     </div>
   </div>
