--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -3,11 +3,11 @@
     <div class="col-md-6 sm-10">
       <h4><%= @customer.name %>さんの詳細ページ</h4>
       <div class="py-3">
-        <%= link_to "#{@customer.name}さんの投稿一覧", pet_posts_admin_customer_path(@customer), class:"btn btn-outline-secondary pt-2" %>
+        <%= link_to "#{@customer.name}さんの投稿", pet_posts_admin_customer_path(@customer), class:"btn btn-outline-secondary pt-2" %>
       </div>
-      <%=render 'info', customer:  @customer %>
+        <%=render 'info', customer:  @customer %>
     </div>
-    <div class="col-md-5 offset-md-1 sm-10">
+    <div class="col-md-6 sm-10">
       <%=render 'admin/customer_pets/info', customer:  @customer, customer_pet: @customer_pet %>
     </div>
   </div>
