--- a/app/views/admin/groups/_index.html.erb
+++ b/app/views/admin/groups/_index.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>エリア名</th>
+      <th>エリア名(グループ名)</th>
       <th>メンバー数</th>
       <th colspan="3"></th>
     </tr>
@@ -15,7 +15,7 @@
         </td>
         <td><%= group.name %></td>
         <td><%= group.customers.count %></td>
-        <td><%= link_to '詳細を見る', admin_group_path(group), class: "btn btn-sm btn-success" %></td>
+        <td><%= link_to '詳細を見る', admin_group_path(group), class: "btn btn-sm btn-outline-warning" %></td>
       </tr>
     <% end %>
   </tbody>
