--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -1,11 +1,16 @@
-<div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class="col-md-8">
-      <h2>グループ一覧</h2>
+<div class='container'>
+  <div class='row justify-content-center'>
+    <div class="col">
+      <h4 class="my-4 ml-5">グループ一覧</h4>
     </div>
-      <%= render 'index', groups: @groups %>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-8 my-3">
+          <%= render 'index', groups: @groups %>
+        </div>
+      </div>
     </div>
-     <div class="mx-auto mt-3">
+    <div class="mx-auto mt-3">
       <%= paginate @groups %>
     </div>
   </div>
