--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -8,7 +8,7 @@
 <div class="container mt-5">
   <div class='row'>
     <div class="col-md-4 col-sm-8 d-flex align-items-center mt-5 ml-3">
-      <%= image_tag @group.get_group_image(500, 500), size: "250x250", class: "rounded" %>
+      <%= image_tag @group.get_group_image(500, 500), class: "rounded", style: "object-fit: cover; width: 250px;" %>
     </div>
     <div class="col col-md-7 col-sm-8 mt-5">
      <table class='table table-bordered'>
@@ -19,10 +19,11 @@
         <th class="bg-light">紹介文</th>
         <td><%= @group.introduction %></td>
       </tr>
+      <tr>
         <th class="bg-light">メンバー</th>
         <td>
           <% @customers.each do |customer| %>
-　　              <%= link_to customer.name, customer_path(customer) %>
+　　        <%= link_to customer.name, customer_path(customer) %>
           <% end %>
         </td>
       </tr>
