--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,33 +1,34 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-10 mx-auto">
-      <h1 class="text-center">PawHantについて</h1>
+    <div class="col-md-6  sm-8 mx-auto">
+      <div class="d-flex align-items-center justify-content-center" style="height: 100vh;">
+        <%= image_tag 'cat.jpg', class:"w-50 h-50" %>
+      </div>
+    </div>
+   <div class="col-md-6 sm-8 mx-auto d-flex flex-column align-items-center">
+      <h1 class="text-center mt-4 text-warning">PawHantについて</h1>
       <div class="my-5 text-center">
         <h4>
-          PawHant（パウハント）は、迷子のペットや保護されたペットが<br>
-          早く飼い主の元に戻れるように支援するプラットフォームです。<br>
+          PawHant（パウハント）は、<br>
+          迷子のペットや保護されたペットが<br>
+          早く飼い主の元に戻れるように支援する<br>
+          プラットフォームです。<br>
         </h4>
       </div>
 
-      <div class="text-center py-3">
+      <div class="text-center py-4">
         <h5>【ペットを飼っている方へ】</h5>
-        <p>PawHantは、大切なペットが迷子になった時、動物を保護した時にサポートいたします。<br>
-        サイト上で迷子・保護のペット情報を共有し、ペットの発見を協力することができます。</p>
+        <p>大切なペットが迷子になった時に<br>
+           迅速に迷子情報を共有することができます。<br>
+           また、保護情報をエリアごとに検索することも可能です。</p>
       </div>
 
-      <div class="text-center py-3">
+      <div class="text-center py-4">
         <h5>【ペットを飼っていない方へ】</h5>
         <p>ペットを飼っていない方も、PawHantに参加できます。<br>
-        迷子のペット情報へのアクセスや保護活動への参加、通知機能の利用など、<br>
-        コミュニティに参加し、一緒にペットの安全を支えることができます。</p>
-      </div>
-
-      <div class="text-center mt-3" style="color: orange;">
-        <h4>PawHantに参加してペットの安全と幸せをサポートしましょう。</h4>
-      </div>
-
-      <div class="text-center py-3">
-        <%= image_tag 'about.jpg', class:"w-50 h-50" %>
+        迷子のペット情報へのアクセスや保護活動への参加、<br>
+        通知機能の利用など、コミュニティに参加して<br>
+        交流を持つことができます。</p>
       </div>
     </div>
   </div>
