--- a/app/views/layouts/_error.html.erb
+++ b/app/views/layouts/_error.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
   <h3 class="text-danger"><%= (obj.errors.count) %> 件のエラーが発生しています。</h3>
-  <ul class="list-unstyled text-danger">
+  <ul class="list-unstyled alert alert-danger" role="alert">
     <% obj.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
