--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav ml-auto">
           <% if customer_signed_in? %>
-            <li class="nav-item ml-auto"><%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-danger" %></li>
+            <li class="nav-item"><%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-danger text-white nav-link ml-2" %></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle btn btn-light ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
