--- a/app/views/public/groups/send_mail.html.erb
+++ b/app/views/public/groups/send_mail.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-md-8 sm-5 mx-auto mt-5 text-center align-items-center d-flex justify-content-center"> <!-- align-items-center と justify-content-center クラスを追加 -->
+    <div class="col-md-8 sm-5 mx-auto mt-5 text-center align-items-center d-flex justify-content-center">
       <div>
         <h3>送信が完了しました</h3>
         <p class="my-4">内容は以下の通りです。</p>
