--- a/app/views/searches/keyword_search.html.erb
+++ b/app/views/searches/keyword_search.html.erb
@@ -5,7 +5,7 @@
         <h4 class="my-3"><%= sanitize(params[:keyword]) %> の検索結果</h4>
         <div class="ml-3">
           <% if customer_signed_in? %>
-            <%= link_to "絞り込み検索をする", new_search_path, class:"btn btn-outline-secondary mb-2" %>
+            <%= link_to "絞り込み検索をする", new_search_path, class:"btn btn-outline-secondary" %>
           <% end %>
         </div>
       </div>
