--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,7 +47,7 @@
           <% elsif admin_signed_in? %>
             <li class="nav-item"><%= link_to "顧客一覧", admin_customers_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle btn btn-light ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -62,7 +62,7 @@
             <li class="nav-item"> <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item"> <%= link_to "About", about_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle btn btn-light ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
