--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
-  <div class="container-fluid border-top">
+  <div class="container-fluid border-top py-4">
     <div class="row">
-      <div class="mx-auto text-center">
+      <div class="mx-auto text-cente">
         <p>©CopyRight PawHant.inc</p>
       </div>
     </div>
