--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -6,17 +6,12 @@
     <div class="card-body">
       <div class="card-text" style="height: 200px;">
       <% if customer_signed_in? %>
-        <% if pet_post.favorited_by?(current_customer) %>
-          <%= link_to pet_post_sightings_path(pet_post), method: :delete do %>
-            <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
-          <% end %>
-            <%= pet_post.sightings.count %> 件の目撃
-        <% else %>
-          <%= link_to pet_post_sightings_path(pet_post), method: :post do %>
-            <i class="fas fa-heart" aria-hidden="true" style="color: grey;"></i>
-          <% end %>
-            <%= pet_post.sightings.count %> 件の目撃
-        <% end %>
+        <div id="sightings_buttons_<%= pet_post.id %>">
+          <%= render "public/sightings/sighting", pet_post: pet_post %>
+        </div>
+
+
+
         <p><%= link_to "#{pet_post.comments.count} 件のコメント", pet_post_path(pet_post.id) %></p>
       <% else %>
         <%= pet_post.sightings.count %> 件の目撃
