--- a/app/views/public/rooms/show.html.erb
+++ b/app/views/public/rooms/show.html.erb
@@ -11,32 +11,38 @@
 </div>
 <div class="container">
   <div class="row mx-auto">
+    <div class="col-md-10 col-sm-10">
     <% if @messages.present? %>
       <% @messages.each do |m| %>
         <% if @myCustomerId == m.customer.id %>
-        <div class="col col-md-10 col-sm-10">
-          <div class="chat">
-            <div class="message d-flex align-items-center justify-content-end">
-              <div class="message-content ms-3">
-                <p class="message-text p-2 bg-light text-dark"><%= m.message %></p>
+        <div class="container">
+          <div class="row">
+              <div class="col col-md-10 col-sm-10">
+                <div class="chat">
+                  <div class="message d-flex align-items-center justify-content-end">
+                    <div class="message-content ms-3">
+                      <p class="message-text p-2 bg-light text-dark"><%= m.message %></p>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-        <% else %>
-        <div class="col col-md-10 col-sm-10 ml-5">
-          <div class="chat">
-            <div class="message d-flex align-items-center">
-              <div class="message-content me-3">
-                <p class="message-name mb-1"><%= m.customer.name %></p>
-                <p class="message-text p-2 bg-warning text-dark"><%= m.message %></p>
+              <% else %>
+              <div class="col col-md-10 col-sm-10 ml-5">
+                <div class="chat">
+                  <div class="message d-flex align-items-center">
+                    <div class="message-content me-3">
+                      <p class="message-name mb-1"><%= m.customer.name %></p>
+                      <p class="message-text p-2 bg-warning text-dark"><%= m.message %></p>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
           </div>
         </div>
         <% end %>
       <% end %>
     <% end %>
+  </div>
   </div>
 </div>
   <div class="row mt-5">
