--- a/app/views/public/comments/_comments-lists.html.erb
+++ b/app/views/public/comments/_comments-lists.html.erb
@@ -2,7 +2,7 @@
   <% pet_post.comments.each do |comment| %>
     <tr>
       <td><%= link_to comment.customer.name, customer_path(comment.customer) %></td>
-      <td><%= comment.comment %></td>
+      <td id ="comment"><%= comment.comment %></td>
       <td>
         <% if comment.customer == current_customer %>
           <%= link_to "削除", pet_post_comment_path(comment.pet_post, comment), method: :delete, class: "btn btn-sm btn-outline-secondary"  %>
