--- a/app/views/public/comments/_form.html.erb
+++ b/app/views/public/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [pet_post, comment] do |f| %>
+<%= form_with model: [pet_post, comment], remote: true do |f| %>
   <%= f.text_area :comment, rows: '2', class: "form-control",  placeholder: "コメントをここに入力してください" %>
   <div class="my-2">
     <%= f.submit "送信する", class: "btn btn-sm btn-outline-secondary" %>
