--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -85,12 +85,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 sm-8 mx-auto">
-      <%= render 'public/comments/comments-lists', pet_post: pet_post, comment: comment %>
+      <div id="comments_area">
+        <%= render 'public/comments/comments-lists', pet_post: pet_post, comment: comment %>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-8 sm-8 mx-auto">
-      <%= render 'public/comments/form', pet_post: pet_post, comment: comment %>
+      <div class="new-comment">
+        <%= render 'public/comments/form', pet_post: pet_post, comment: comment %>
+      </div>
     </div>
   </div>
 </div>
