--- a/app/views/public/mailer/reset_password_instructions.html.erb
+++ b/app/views/public/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+ <p><%= "こんにちは、" %> <%= @resource.name %> 様！</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+ <p><%= "パスワードの変更を受け付けました。以下のリンクから変更できます。" %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+ <p><%= link_to "パスワードを変更する", edit_password_url(@resource, :reset_password_token => @token ) %></p>
+ <p><%= "※リンクの有効期限は1時間です。" %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+ <p><%= "※パスワードリセットの申請に心当たりがない場合は、以降の対応は不要となります。" %></p>
+ <p><%= "※上記リンクをクリックして新しいパスワードを作成しない限り、パスワードは変更されません。" %></p>
