--- a/app/views/contact_mailer/send_mail.text.erb
+++ b/app/views/contact_mailer/send_mail.text.erb
@@ -1,9 +1,7 @@
-=========================================
-お知らせ
-=========================================
+<h3>【 <%= @group_name %>グループからの通知です。 】</h3>
 
-タイトル:
-<%= @mail_title %>
+<p><%= "※ タイトル" %></p>
+<p><%= @mail_title %></p>
 
-本文:
-<%= @mail_content %>
+<p><%= "※ 詳細" %></p>
+<p><%= @mail_content %></p>
