--- a/app/views/public/mailer/reset_password_instructions.html.erb
+++ b/app/views/public/mailer/reset_password_instructions.html.erb
@@ -3,6 +3,8 @@
  <p><%= "パスワードの変更を受け付けました。以下のリンクから変更できます。" %></p>
 
  <p><%= link_to "パスワードを変更する", edit_password_url(@resource, :reset_password_token => @token ) %></p>
+  <p><%= link_to "パスワードを変更するpro",  "http://pawhant.com/customers/password/edit?reset_password_token=#{@token}" %></p>
+ 
  <p><%= "※リンクの有効期限は1時間です。" %></p>
 
  <p><%= "※パスワードリセットの申請に心当たりがない場合は、以降の対応は不要となります。" %></p>
