--- a/app/views/public/mailer/reset_password_instructions.html.erb
+++ b/app/views/public/mailer/reset_password_instructions.html.erb
@@ -2,8 +2,12 @@
 
  <p><%= "パスワードの変更を受け付けました。以下のリンクから変更できます。" %></p>
 
- <p><%= link_to "パスワードを変更する", edit_password_url(@resource, :reset_password_token => @token ) %></p>
-  <p><%= link_to "パスワードを変更するpro",  "http://pawhant.com/customers/password/edit?reset_password_token=#{@token}" %></p>
+<% if ENV["RAILS_ENV"] == "production" %>
+  <p><%= link_to "パスワードを変更する",  "http://pawhant.com/customers/password/edit?reset_password_token=#{@token}" %></p>
+<% else %>
+  <p><%= link_to "パスワードを変更する", edit_password_url(@resource, :reset_password_token => @token ) %></p>
+<% end %>
+ 
  
  <p><%= "※リンクの有効期限は1時間です。" %></p>
 
