--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -7,6 +7,9 @@
           <%= link_to "グループを作成する", new_group_path, class: "btn btn-outline-primary float-right" %>
         </div>
       </div>
+      <div class="ml-5">
+      グループに所属することで、メンバーに迷子情報・保護情報を通知することが出来ます。
+      </div>
     </div>
     <div class="container">
       <div class="row justify-content-center">
