--- a/app/views/contact_mailer/send_mail.text.erb
+++ b/app/views/contact_mailer/send_mail.text.erb
@@ -1,4 +1,6 @@
-<h3>【 <%= @group_name %>グループからの通知です。 】</h3>
+<h3>【 <%= @group_name %>グループ 】</h3>
+
+<h4><%= @customer_name %>さんからの通知です。</h4>
 
 <p><%= "※ タイトル" %></p>
 <p><%= @mail_title %></p>
