--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>エリア名(グループ名)</th>
+      <th>グループ名</th>
       <th>メンバー数</th>
       <th colspan="3"></th>
     </tr>
