--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <%= f.label :"エリア名(グループ名)" %>
+  <%= f.label :"グループ名" %>
   <%= f.text_field :name, class: 'form-control' %>
 </div>
 <div class="form-group">
