--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,29 +1,35 @@
 <div class="container">
   <div class="row">
+    <% if @customer.active == true %>
     <div class="col-md-6 sm-10">
-      <h4><%= @customer.name %>さんの詳細ページ</h4>
-      <table class="table table-borderless">
-        <tr>
-          <td>
-            <%= link_to "#{@customer.name} さんがリアクションした投稿", customer_customers_sighting_pet_posts_path(@customer), class:"btn btn-outline-secondary my-2" %>
-            <%= link_to "#{@customer.name} さんの投稿", pet_posts_customer_path(@customer), class:"btn btn-outline-secondary my-2" %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <%= render 'dm', customer: @customer, isRoom: @isRoom, roomId: @roomId, room: @room, entry: @entry %>
-          </td>
-        </tr>
-      </table>
-      <div class="mt-5">
-      <% if current_customer == @customer %>
-        <p>※下記の情報は他のユーザーには表示されません</p>
-        <%= render 'info', customer:  @customer %>
-       <% end %>
+        <h4><%= @customer.name %>さんの詳細ページ</h4>
+        <table class="table table-borderless">
+          <tr>
+            <td>
+              <%= link_to "#{@customer.name} さんがリアクションした投稿", customer_customers_sighting_pet_posts_path(@customer), class:"btn btn-outline-secondary my-2" %>
+              <%= link_to "#{@customer.name} さんの投稿", pet_posts_customer_path(@customer), class:"btn btn-outline-secondary my-2" %>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <%= render 'dm', customer: @customer, isRoom: @isRoom, roomId: @roomId, room: @room, entry: @entry %>
+            </td>
+          </tr>
+        </table>
+        <div class="mt-5">
+          <% if current_customer == @customer %>
+            <p>※下記の情報は他のユーザーには表示されません</p>
+            <%= render 'info', customer:  @customer %>
+           <% end %>
+        </div>
       </div>
-    </div>
-    <div class="col-md-6 sm-10">
-      <%=render 'public/customer_pets/info', customer:  @customer, customer_pet: @customer_pet %>
-    </div>
+      <div class="col-md-6 sm-10">
+        <%=render 'public/customer_pets/info', customer:  @customer, customer_pet: @customer_pet %>
+      </div>
+    <% else %>
+     <div class="d-flex justify-content-center align-items-center mx-auto mt-5" style="height: 40vh;">
+        <h4><%= @customer.name %>さんは退会しました。</h4>
+      </div>
+    <% end %>
   </div>
 </div>
