--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -12,7 +12,7 @@
       <tr>
         <td><%= image_tag group.get_group_image(500, 500), size: "50x50", class: "rounded" %></td>
         <td><%= group.name %></td>
-        <td><%= group.customers.count %></td>
+        <td><%= group.customers.where(active: true).count %></td>
         <td><%= link_to '詳細を見る', group_path(group), class: "btn btn-sm btn-outline-warning" %></td>
         <% if group.customers.where(id: current_customer.id).present? %>
           <td><%= link_to 'メールを送信',group_new_mail_path(group), class: "btn btn-sm btn-outline-primary" %></td>
